:bug: add an overflow hidden on second container

--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ h2{
 	height: 100vh;
 	width: 100%;
 	background-color: #000;
+	overflow: hidden;
 }
 
 .competence{
